[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/NoteViewport.gd" type="Script" id=1]
[ext_resource path="res://assets/text-4k.png" type="Texture" id=2]
[ext_resource path="res://scripts/NotePainter.gd" type="Script" id=3]
[ext_resource path="res://scripts/InputHandler.gd" type="Script" id=4]
[ext_resource path="res://scripts/NoteHandler.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/Sniglet-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/Receptors.gd" type="Script" id=8]
[ext_resource path="res://scripts/ScreenFilter.gd" type="Script" id=9]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://shaders/receptors.shader" type="Shader" id=11]
[ext_resource path="res://shaders/notemesh.shader" type="Shader" id=12]
[ext_resource path="res://shaders/notelines.shader" type="Shader" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 11 )
shader_param/num_receptors = 8
shader_param/receptor_offset = 0.392699
shader_param/line_color = Color( 0, 0, 1, 1 )
shader_param/dot_color = Color( 0, 0, 1, 1 )
shader_param/shadow_color = Color( 0, 0, 0, 0.57 )
shader_param/line_thickness = 0.00434783
shader_param/dot_radius = 0.026087
shader_param/shadow_thickness = 0.0173913
shader_param/px = 0.00108696
shader_param/px2 = 0.00217391
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 12 )
shader_param/bps = null
shader_param/star_color = null
shader_param/held_color = null
shader_param/screen_size = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 13 )
shader_param/line_color = Color( 0.8, 0.8, 1, 0.8 )
shader_param/line_color_double = Color( 1, 1, 0.6, 0.9 )
shader_param/dot_color = Color( 1, 1, 1, 0.8 )
shader_param/bps = 1.0
shader_param/line_thickness = 0.012
shader_param/line_thickness_min = 0.0
shader_param/dot_thickness = 0.033
shader_param/dot_fullbright_thickness = 0.013
shader_param/max_angle = 1.0708
shader_param/max_dist = 1.25
shader_param/array_postmul = Vector3( 1, 1, 1 )
shader_param/array_sidelen = 16
shader_param/array_size = 256

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="GDScript" id=5]
script/source = "extends Label

const colors = [Color.gray, Color.lightgray, Color.aqua, Color.gold]


func _on_NoteHandler_combo_changed(value) -> void:
	text = str(value)
	visible = (value > 0)
	add_color_override('font_color', colors[int(min(3, value/50))])


func _on_NoteHandler_finished_song(song_key, score_data) -> void:
	visible = false
"

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 4

[sub_resource type="Curve" id=7]
min_value = -1.0
_data = [ Vector2( -1, -1 ), 0.0, 0.0, 0, 0, Vector2( 0, 0 ), 2.0, 2.0, 1, 1, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="StepGame" type="AspectRatioContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square" type="Control" parent="."]
margin_right = 1080.0
margin_bottom = 1080.0

[node name="video" type="TextureRect" parent="Square" groups=["VideoTexRects"]]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 540, 540 )
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenFilter" type="ColorRect" parent="Square"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Receptors" type="Control" parent="Square"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoteHandler" type="Control" parent="Square"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Square/NoteHandler"]
size = Vector2( 1080, 1080 )
transparent_bg = true
usage = 1
render_target_v_flip = true
script = ExtResource( 1 )

[node name="Center" type="Node2D" parent="Square/NoteHandler/Viewport"]
position = Vector2( 540, 540 )

[node name="SlideTrailHandler" type="Node2D" parent="Square/NoteHandler/Viewport/Center"]

[node name="JudgeText" type="MeshInstance2D" parent="Square/NoteHandler/Viewport/Center"]
texture = ExtResource( 2 )

[node name="meshinstance" type="MeshInstance2D" parent="Square/NoteHandler/Viewport/Center"]
material = SubResource( 2 )

[node name="notelines" type="MeshInstance2D" parent="Square/NoteHandler/Viewport/Center"]
material = SubResource( 3 )

[node name="lbl_combo" type="Label" parent="Square/NoteHandler"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Painter" type="Control" parent="Square"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="Square" instance=ExtResource( 10 )]
NoteHandlerPath = NodePath("../NoteHandler")
ReceptorsPath = NodePath("../Receptors")
ease_curve = SubResource( 7 )

[node name="InputHandler" type="Control" parent="Square"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="combo_changed" from="Square/NoteHandler" to="Square/NoteHandler/lbl_combo" method="_on_NoteHandler_combo_changed"]
[connection signal="finished_song" from="Square/NoteHandler" to="Square/NoteHandler/lbl_combo" method="_on_NoteHandler_finished_song"]
[connection signal="column_pressed" from="Square/InputHandler" to="Square/NoteHandler" method="_on_InputHandler_column_pressed"]
[connection signal="column_released" from="Square/InputHandler" to="Square/NoteHandler" method="_on_InputHandler_column_released"]
